--- a/css/style.css
+++ b/css/style.css
@@ -1,105 +1,205 @@
-﻿body {
-    background-image: url("/img/hotel.jpg");
-}
-h1{ color:white;
-   padding; 10px;
-}
-#hyrje
+﻿*
 {
-    width: 100%;
-    height: auto;
+    margin:0;
+    padding:0;
+    font-family:'Century Gothic';
 }
-#koka{
-    width: 100%;
-    height: 100px;
-    background-color:mediumaquamarine;
+header {
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url("../img/htl.jpg");
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
 }
-#logo{
-    width:30%;
-    height:100px;
-    float: left;
-   
-}
-#linqe{
-    width: 70%;
-    height:100px;
-    float:left;
-
+ul{
+    list-style-type:none;
+    float:right;
+    margin-top:25px;
 }
 ul li{
-    list-style:none;
-    float:left;
-    width:10%;
-    height:50px;
-    line-height:50px;
-    text-align:center;
-    
+    display:inline-block;
+  
 }
-a{
-    text-decoration:none;
+    ul li a {
+        text-decoration:none;
+        color: white;
+        padding: 5px 20px;
+        border: 1px solid transparent;
+    }
+    ul li a:hover{
+        background-color:white;
+        color:black;
+
+    }
+#hyrje{
+    max-width:1200px;
+    margin:auto;
+}
+ul li.aktive a {
+    background-color: white;
+    color: black;
+}
+.titulli{
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+}
+.titulli h1{
     color:white;
+    font-size:50px;
 }
-#ndarje {
+.titulli #pershkrim {
+    
+    color: white;
+    font-size: 20px;
+}
+.shume {
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+.buton{
+    border:1px solid white;
+    padding: 10px 30px;
+    color:white;
+    text-decoration:none;
+}
+    .buton:hover {
+        background-color: white;
+        color: black;
+    }
+#fotot {
     width: 100%;
-    height: 50%;
-    background-image: url("../img/hotel.jpg");
-    background-repeat:no-repeat;
-    background-size:100% auto;
+    height: 500px;
+    padding-top: 15%;
 }
 
-table#tabela1 {
-    
-    width: 40%;
-    margin-left: 35%;
-    margin-right: 15%;
-    
-    height:85%;
-   
-} 
-table#table2{
-    height:30%;
+#nje {
+    width: 22%;
+    height: auto;
+    float: left;
+    padding: 10;
+    color:white;
+    padding-left:25px;
 }
-//@media(max-width:500px;) and (min-width:50px;)
-//I need stop work with the media
-//it will determine how my page will look once the windows size datalist changed
-//responsive layout
- #fotot{
-    width:100%;
-    height:500px;
-}
-#nje{
-    width:22%;
-    height:auto;
-    float:left;
-    padding:10;
-}
+
 #dy {
     width: 22%;
     height: auto;
     float: left;
     padding: 10;
+    color: white;
+    padding-left: 25px;
 }
+
 #tre {
     width: 22%;
     height: auto;
     float: left;
     padding: 10;
+    color: white;
+    padding-left: 25px;
 }
+
 #kater {
     width: 22%;
     height: auto;
     float: left;
-    padding:10;
+    padding: 10;
+    color: white;
+    padding-left: 25px;
+}
+#tabela1 {
+    border-collapse: collapse;
+    margin-left: 70px;
+    margin-right: 70px;
+    font-size: 20px;
+    min-width: 400px;
+    text-align:center;
+}
+ table#tabela1 th{
+     background-color: azure;
+     color:black;
+     
+
+ }
+table#tabela1 td{
+    padding: 10px 10px;
+}
+table#tabela1 tbody tr {
+    border-bottom: 1px solid #dddddd;
+}
+table#tabela1 tbody tr:nth-of-type(2n+1){
+    background-color:grey;
+}
+#selekto {
+    display: block;
+    font-size: 14px;
+    font-family: sans-serif;
+    font-weight: 700;
+    color: #444;
+    line-height: 1.3;
+    padding: .6em 1.4em .5em .8em;
+    width: 100%;
+    max-width: 100%;
+    box-sizing: border-box;
+    margin: 0;
+    border: 1px solid #aaa;
+    box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
+    border-radius: .5em;
+    appearance: none;
+    background-color: #fff;
+   
+}
+input[type=date] {
+    display: block;
+    font-family: sans-serif;
+    color: #444;
+    border-radius: .5em;
+    width: 100%;
+    max-width: 100%;
+    box-sizing: border-box;
+    box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
 }
 
+#selekto:hover {
+    border-color: #888;
+}
+input[type=text] {
+    padding: 5px;
+    border: 2px solid #ccc;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+}
+input[type=password] {
+    padding: 5px;
+    border: 2px solid #ccc;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+}
 
+    input[type=text]:focus {
+        border-color: #333;
+    }
 
-
-
-
-
-
-
-
-
-
+input[type=submit] {
+    padding: 5px 15px;
+    background: #ccc;
+    border: 0 none;
+    cursor: pointer;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    font-family: sans-serif;
+    font-size: 14px;
+}
+input[type=reset] {
+    padding: 5px 15px;
+    background: #ccc;
+    border: 0 none;
+    cursor: pointer;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    font-family: sans-serif;
+    font-size: 14px;
+}
